# Python-Module-08

ex0/: construct.py
ex1/: loading.py  pyproject.toml
ex2/: .gitignore  oracle.py
